--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 #Web {
-    font-size: 128px;
+    font-size: 200px;
+    text-align: center;
+}
+body {
+    background-color: rgb(0, 132, 255);
 }
