--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #Web {
     font-size: 100px;
     text-align: center;
+    font-family: 'Nosifer', sans-serif;
 }
 body {
     background-color: rgb(184, 193, 201);
@@ -8,8 +9,14 @@ body {
 .Size {
     font-size: 50px
 }
-.Box{
-    border: 200px;
-    margin-top: 100px;
-    padding-right: 100px;
+#Box{
+    border-style: dotted ;
+    margin-top:10x;
+    padding-left: 50px;
+    padding-top: 50px;
+    width: 500px;
+    height: 100px;
+}
+img {
+    padding-left: 500px;
 }
